syntax = "proto3";

package counters;

option go_package = "services/counters/api/grpc";

import "google/protobuf/empty.proto";

service Counters {
    rpc IncrementUnreadMessageCounter (IncrementUnreadMessageCounterRequest) returns (google.protobuf.Empty);
    rpc DecrementUnreadMessageCounter (DecrementUnreadMessageCounterRequest) returns (google.protobuf.Empty);
    rpc UnreadChatsCount (UnreadChatsCountRequest) returns (UnreadChatsCountResponse);
    rpc FlushChatCounter (FlushChatCounterRequest) returns (google.protobuf.Empty);
}

message IncrementUnreadMessageCounterRequest {
    repeated string user_ids = 1;
    string chat_id = 2;
}

message DecrementUnreadMessageCounterRequest {
    repeated string user_ids = 1;
    string chat_id = 2;
}

message UnreadChatsCountRequest {
    string user_id = 1;
    repeated string chat_ids = 2;
}

message UnreadChatsCountResponse {
    map<string, int64> chatsUnreadMessages = 3;
}

message FlushChatCounterRequest {
    string user_id = 1;
    string chat_id = 2;
}
